--- a/assets/templates/assets/index.html
+++ b/assets/templates/assets/index.html
@@ -28,7 +28,7 @@
 
         <div class="box">
         <div class="box-header">
-            <h3 class="box-title">资产总表<small>(不含软件)</small></h3>
+            <h3 class="box-title">资产总表<small>(含软件)</small></h3>
         </div>
         <!-- /.box-header -->
         <div class="box-body">
@@ -68,11 +68,7 @@
                         <td class="text-orange text-bold">{{ asset.get_asset_type_display }}</td>
                         <td>{{ asset.software.get_sub_asset_type_display }}</td>
                     {% endif %}
-                      {% if asset.asset_type == 'server' %}
-                          <td><a href="{% url 'assets:detail' asset.id %}">{{ asset.name }}</a></td>
-                      {% else %}
-                          <td>{{ asset.name }}</td>
-                      {% endif %}
+                    <td><a href="{% url 'assets:detail' asset.id %}">{{ asset.name }}</a></td>
                     <td>{{ asset.sn }}</td>
                     <td>{{ asset.business_unit|default_if_none:"_" }}</td>
                       {% if asset.status == 0 %}
