--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <title>{% block title %}base{% endblock %}</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <link rel="icon" href="/static/images/favicon-32x32.png" type="image/x-icon">
   <link rel="stylesheet" href="{% static 'adminlte-2.4.10/bower_components/bootstrap/dist/css/bootstrap.min.css' %}">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="{% static 'adminlte-2.4.10/bower_components/font-awesome/css/font-awesome.min.css' %}">
@@ -250,7 +251,40 @@ desired effect
         <li class="header">导航栏</li>
         <!-- Optionally, you can add icons to the links -->
         <li><a href="{% url 'assets:dashboard' %}"><i class="fa fa-dashboard"></i> <span>仪表盘</span></a></li>
-        <li><a href="{% url 'assets:index' %}"><i class="fa fa-table"></i> <span>资产总表</span></a></li>
+        <li><a href="{% url 'assets:index' %}"><i class="fa fa-table"></i> <span>资源概览</span></a></li>
+        <li><a href="{% url 'assets:index' %}"><i class="fa fa-table"></i> <span>资源审批</span></a></li>
+          <li class="treeview"><a href="#"><i class="fa fa-server"></i>资源管理
+              <span class="pull-right-container">
+                  <i class="fa fa-angle-left pull-right"></i>
+              </span>
+            </a>
+            <ul class="treeview-menu">
+                <li><a href="{% url 'assets:asset_list' asset_type='server' %}"><i class="fa"></i>服务器</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type='networkdevice' %}"><i class="fa"></i>网络设备</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type='storagedevice' %}"><i class="fa"></i>存储设备</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type='securitydevice' %}"><i class="fa"></i>安全设备</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type='software' %}"><i class="fa"></i>软件</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type=5 %}"><i class="fa"></i>业务</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type=6 %}"><i class="fa"></i>厂商</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type=7 %}"><i class="fa"></i>合同</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type=8 %}"><i class="fa"></i>机房</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type=9 %}"><i class="fa"></i>标签</a></li>
+            </ul>
+          </li>
+          <li class="treeview"><a href="#"><i class="fa fa-arrow-circle-o-down"></i>运营分析
+              <span class="pull-right-container">
+                  <i class="fa fa-angle-left pull-right"></i>
+              </span>
+              </a>
+            <ul class="treeview-menu">
+                <li><a href="#"><i class="fa"></i>报表查询</a></li>
+                <li><a href="{% url 'assets:event' %}"><i class="fa"></i>事件记录</a></li>
+            </ul>
+          </li>
+          <li><a href="#"><i class="fa fa-circle-o"></i>用户管理</a></li>
+            <ul class="treeview-menu">
+            </ul>
+          <li><a href="#"><i class="fa fa-circle-o"></i>系统管理</a></li>
       </ul>
       <!-- /.sidebar-menu -->
     </section>
@@ -307,6 +341,96 @@ desired effect
         }else{
         }
     });
+
+    //变量AdminLTEOptions用来修改app.js中的配置，所有需要在app.js之前编写
+  // （其实放在app.js之后也可以，看你代码结构是什么了，正常需要放在app.js之前）
+  var AdminLTEOptions = {
+    /*1、内菜单配置，就是消息、提醒、任务那三个的内部菜单那种*/
+    //添加slimscroll到导航栏菜单，（其实在app.js之后加载该插件也可以运行的）
+    // 这就需要你在每一个页面的app.js之前加载jquery.slimscroll.min.js插件，
+    navbarMenuSlimscroll: true,//是否为内菜单使用slimscroll插件
+    navbarMenuSlimscrollWidth: "10px", //内菜单的滚动条宽度
+    navbarMenuHeight: "200px",//内菜单高度
+    /*2、*/
+    //指定控件的折叠速度，例如box collapse/expand展开折叠 and sidebar treeview slide up/down上下滑动.。
+    //此选项接受整数为毫秒，'fast', 'normal', or 'slow'
+    animationSpeed: 'fast',
+    /*3、指定侧边栏伸缩的控制按钮*/
+    sidebarToggleSelector: "[data-toggle='offcanvas']",
+    sidebarPushMenu: true,//侧边栏伸缩使能
+    sidebarSlimScroll: true,//fixed固定布局下侧边栏滚动条使能
+    sidebarExpandOnHover: true,//当侧边栏隐藏时，鼠标悬停侧边栏展开。当fixed和sidebar-mini一起使用时，不管true或false都会展开（即该配置无效）
+
+    /*box*/
+    enableBoxRefresh: false,
+    /*Bootstrap.js的提示信息*/
+    enableBSToppltip: true,//使能
+    BSTooltipSelector: "[data-toggle='tooltip']",//给元素指定tooltip事件，元素中的事件必须和该事件相同
+    /*给触摸设备开启快速点击体验，需要引用jquery.slimscroll.min.js*/
+    enableFastclick: false,
+    enableControlTreeView: true,//树视图控制，即侧边栏的点击动画效果
+    enableControlSidebar: true,//右侧边栏的控制选项
+    /*右侧边栏配置*/
+    controlSidebarOptions: {
+      //哪个按钮应该触发开/关事件
+      toggleBtnSelector: "[data-toggle='control-sidebar']",
+      //侧边栏选择器
+      selector: ".control-sidebar",
+      //运行划过内容
+      slide: false//true表示在内容上层覆盖，FALSE表示推挤
+    },
+    enableBoxWidget: true,//允许box折叠和删除
+    //框插件插件选项
+    boxWidgetOptions: {
+      boxWidgetIcons: {
+        //Collapse icon
+        collapse: 'fa-minus',
+        //Open icon
+        open: 'fa-plus',
+        //Remove icon
+        remove: 'fa-times'
+      },
+      boxWidgetSelectors: {
+        //Remove button selector
+        remove: '[data-widget="remove"]',
+        //折叠按钮的选择
+        collapse: '[data-widget="collapse"]'
+      }
+    },
+    //Direct Chat plugin options
+    directChat: {
+      //默认启用直接聊天
+      enable: true,
+      //打开和关闭聊天联系人窗格的按钮
+      contactToggleSelector: '[data-widget="chat-pane-toggle"]'
+    },
+    //在这里可以自己额外添加新的颜色
+    colors: {
+      lightBlue: "#3c8dbc",
+      red: "#f56954",
+      green: "#00a65a",
+      aqua: "#00c0ef",
+      yellow: "#f39c12",
+      blue: "#0073b7",
+      navy: "#001F3F",
+      teal: "#39CCCC",
+      olive: "#3D9970",
+      lime: "#01FF70",
+      orange: "#FF851B",
+      fuchsia: "#F012BE",
+      purple: "#8E24AA",
+      maroon: "#D81B60",
+      black: "#222222",
+      gray: "#d2d6de"
+    },
+    //这里是修改响应式的分界点
+    screenSizes: {
+      xs: 480,
+      sm: 768,
+      md: 992,
+      lg: 1200
+    }
+  };
 </script>
 </body>
 </html>
