--- a/assets/templates/assets/manage/server_manage.html
+++ b/assets/templates/assets/manage/server_manage.html
@@ -1,11 +1,14 @@
 {% extends 'base_assets_form.html' %}
 
 
+{% block form_action %}
+    /assets/asset_manage_update/{{ asset.id }}/
+{% endblock %}
 {# 各类型对应表单 #}
 {% block extends_form %}
     <div class="box box-info">
         <div class="box-header with-border">
-            <h3>{{ asset.get_asset_type_display }}信息</h3>
+            <h3>{{ asset.get_asset_type_display|default:"服务器" }}信息</h3>
         </div>
         <div class="box-body">
             <div class="row">
@@ -34,12 +37,12 @@
                 <div class="form-group">
                     <label for="hosted_on" class="col-sm-2 control-label">宿主机</label>
                     <div class="col-sm-3">
-                        <input type="text" class="form-control" placeholder=" " value="{{ asset.server.hosted_on }}">
+                        <input name="hosted_on" type="text" class="form-control" placeholder=" " value="{{ asset.server.hosted_on }}">
                     </div>
 
                     <label for="model" class="col-sm-2 control-label">服务器型号</label>
                     <div class="col-sm-3">
-                        <input type="text" class="form-control" placeholder=" " value="{{ asset.server.model }}">
+                        <input name="model" type="text" class="form-control" placeholder=" " value="{{ asset.server.model }}">
                     </div>
                 </div>
             </div>
@@ -47,12 +50,12 @@
                 <div class="form-group">
                     <label for="raid_type" class="col-sm-2 control-label">Raid类型</label>
                     <div class="col-sm-3">
-                        <input type="text" class="form-control" placeholder=" " value="{{ asset.server.raid_type|default:'' }}">
+                        <input name="raid_type" type="text" class="form-control" placeholder=" " value="{{ asset.server.raid_type|default:'' }}">
                     </div>
 
                     <label for="os_type" class="col-sm-2 control-label">操作系统类型</label>
                     <div class="col-sm-3">
-                        <input type="text" class="form-control" placeholder=" " value="{{ asset.server.os_type }}">
+                        <input name="os_type" type="text" class="form-control" placeholder=" " value="{{ asset.server.os_type }}">
                     </div>
                 </div>
             </div>
@@ -60,12 +63,12 @@
                 <div class="form-group">
                     <label for="os_distribution" class="col-sm-2 control-label">发行商</label>
                     <div class="col-sm-3">
-                        <input type="text" class="form-control" placeholder=" " value="{{ asset.server.os_distribution }}">
+                        <input name="os_distribution" type="text" class="form-control" placeholder=" " value="{{ asset.server.os_distribution }}">
                     </div>
 
                     <label for="os_release" class="col-sm-2 control-label">操作系统版本</label>
                     <div class="col-sm-3">
-                        <input type="text" class="form-control" placeholder=" " value="{{ asset.server.os_release }}">
+                        <input name="os_release" type="text" class="form-control" placeholder=" " value="{{ asset.server.os_release }}">
                     </div>
                 </div>
             </div>
