--- a/assets/templates/assets/manage/storagedevice_manage.html
+++ b/assets/templates/assets/manage/storagedevice_manage.html
@@ -5,7 +5,7 @@
 {% block extends_form %}
     <div class="box box-info">
         <div class="box-header with-border">
-            <h3>{{ asset.get_asset_type_display }}信息</h3>
+            <h3>{{ asset.get_asset_type_display|default:"存储设备" }}信息</h3>
         </div>
         <div class="box-body">
             <div class="row">
@@ -23,7 +23,7 @@
 
                     <label for="created_by" class="col-sm-2 control-label">存储设备型号</label>
                     <div class="col-sm-3">
-                        <input type="text" class="form-control" placeholder=" " value="{{ asset.storagedevice.model }}">
+                        <input name="model" type="text" class="form-control" placeholder=" " value="{{ asset.storagedevice.model }}">
                     </div>
                 </div>
             </div>
